# rdm

./: .gitignore  Cargo.toml  README.md  benchmark.sh  quick-test.sh  run_server.sh
rdm-chrome-extension/: README.md
rdm-chrome-extension/src/background/: app.js  logger.js
rdm-chrome-extension/src/popup/: disabled.html  error.html  popup.html  popup.js
rdm-extension/: manifest.json
rdm-extension/_locales/en_US/: messages.json
rdm-extension/src/background/: connector.js  main.js  request-watcher.js
rdm-extension/src/popup/: error.js  popup.css
rdm-firefox-extension/: manifest.json
rdm-firefox-extension/_locales/en_US/: messages.json
rdm-firefox-extension/src/background/: app.js  bundle.js  connector.js  logger.js  request-watcher.js
rdm-firefox-extension/src/popup/: popup.js
rdm_cli/: Cargo.toml
rdm_cli/src/: main.rs  terminal_observer.rs
rdm_core/: Cargo.toml
rdm_core/src/: lib.rs  progress.rs
rdm_core/src/downloader/: http_downloader.rs  mod.rs  piece_grabber.rs  segment_grabber.rs
rdm_core/src/downloader/strategy/: download_strategy.rs  multipart_download_strategy.rs
rdm_core/src/progress/: mod.rs  notifier.rs  observer.rs  snapshot.rs
rdm_core/src/types/: types.rs
rdm_core/tests/: http_downloader_tests.rs  multipart_download_strategy_tests.rs  piece_grabber_tests.rs  segment_grabber_tests.rs
rdm_server/: Cargo.toml
rdm_server/src/: lib.rs  main.rs  path_sanitizer.rs  server.rs  sse_observer.rs  types.rs  video_tracker.rs
rdm_ui/: Cargo.toml
rdm_ui/assets/: app.css
rdm_ui/src/: api.rs  app.rs  main.rs  styles.rs
src/: lib.rs  main.rs
src/rdm_core/: mod.rs
src/rdm_core/downloader/: http_downloader.rs  mod.rs  piece_grabber.rs
src/rdm_core/downloader/strategy/: download_strategy.rs  mod.rs  multipart_download_strategy.rs
src/rdm_core/types/: types.rs
tests/: http_downloader_tests.rs  multipart_download_strategy_tests.rs  piece_grabber_tests.rs
