[package]
name = "rdm_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdmd"
path = "src/main.rs"

[dependencies]
rdm_core    = { path = "../rdm_core" }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0"
log         = "0.4.29"
env_logger  = "0.11.9"
tokio       = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net"] }
tower       = "0.5.3"
tower-http  = { version = "0.6", features = ["cors"] }
axum        = "0.8.8"
dirs-next   = "2.0"
